--- a/Test.html
+++ b/Test.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>New Iphone 16E</title>
+    <link rel="stylesheet" href="style.CSS">
     <style>
         #headline01{
             background-color: blanchedalmond;
             text-align: center;
         }
-        #paragraph{download-removebg-preview.png
+        #paragraph{
             font-size: medium;
             font-family: Arial, Helvetica, sans-serif;
             text-align: center;
